# zzz

./: .gitignore  LICENCE  README.md  install.sh  pyproject.toml  requirements.txt
scripts/: echo.py  echo.zzz  greet.zzz  qshare.py  rt.zzz  test.py  ts.zzz  zcrack.py  zhydra.zzz
scripts/bf/: ssh.zzz
scripts/heck/bforce/: login.zzz
scripts/temp/: rockyou-05.txt
zzz/: __init__.py  runner.py  script.py
zzz/backup/: script.py
zzz/cli/: commands.py
zzz/config/: __init__.py  config.py
zzz/core/: executor.py  logger.py  models.py  runner.py  script.py  task.py
zzz/core/context/: __init__.py  command.py  context.py  script.py
zzz/core/precompiler/: __init__.py  agent.py  macros.py  precompiler.py
zzz/core/runner/: __init__.py  base.py  cli.py  interactive.py
zzz/ext/modules/: sp.py
zzz/ext/modules/cli/: zcli.py
zzz/lib/: macros.py  module.py  script.py
zzz/modules/: console.py  process.py
zzz/utils/: __init__.py  cli.py  console.py  parser.py  path.py
