[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zzz"
version = "0.0.1"
description = "ZZZ lazy script runner"
authors = [{name="luvbyte", email="lovemelong@protonmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich",
    "click",
    "requests",
    "pydantic",
]

[project.scripts]
zzz = "zzz.cli.commands:main"

[tool.setuptools.packages.find]
include = ["zzz*"]